<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRadioButton">

    <ImageView
        android:id="@+id/testImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/lorem_ipsum"
        android:scaleType="centerInside"
        android:src="@drawable/test_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getRandomImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_random_image"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/testImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/keywordRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@id/animalRadioButton"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/getRandomImageButton"
        app:layout_constraintStart_toStartOf="@+id/getRandomImageButton">

        <RadioButton
            android:id="@+id/spaceRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/space"/>

        <RadioButton
            android:id="@+id/architectureRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/architecture"/>

        <RadioButton
            android:id="@+id/waterRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water"/>

        <RadioButton
            android:id="@+id/animalRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animal"/>

    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/testImageView"
        app:layout_constraintStart_toStartOf="@+id/testImageView"
        app:layout_constraintEnd_toEndOf="@+id/testImageView"
        app:layout_constraintBottom_toBottomOf="@+id/testImageView"/>

</androidx.constraintlayout.widget.ConstraintLayout>