<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentEditText">

    <ImageView
        android:id="@+id/testImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/lorem_ipsum"
        android:scaleType="centerInside"
        android:src="@drawable/test_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getRandomImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_image_view"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/testImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/useKeywordCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_keyword"
        android:layout_marginTop="4dp"
        android:checked="false"
        app:layout_constraintTop_toBottomOf="@+id/getRandomImageButton"
        app:layout_constraintStart_toStartOf="@+id/getRandomImageButton"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/useAutoEnterSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_auto_enter"
        android:layout_marginTop="4dp"
        android:checked="false"
        app:layout_constraintTop_toBottomOf="@+id/useKeywordCheckBox"
        app:layout_constraintStart_toStartOf="@+id/getRandomImageButton"/>

    <EditText
        android:id="@+id/keywordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/enter_image_keyword"
        android:inputType="text"
        android:importantForAutofill="no"
        android:imeOptions="actionSearch"
        app:layout_constraintTop_toBottomOf="@+id/useAutoEnterSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>